Added hint in exercise 4

--- a/Part_2_Data_Visualisation_with_Python.ipynb
+++ b/Part_2_Data_Visualisation_with_Python.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Part_2_Data_Visualisation_with_Python.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1150,7 +1151,7 @@
         "id": "5jpqJcmCjq1E"
       },
       "source": [
-        "# your answer"
+        "# your answer\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1174,10 +1175,70 @@
       "source": [
         "# Your answer\n",
         "#\n",
-        "# hint: here is a page with help on string splitting https://jakevdp.github.io/WhirlwindTourOfPython/14-strings-and-regular-expressions.html"
+        "# Hint: https://plotly.com/python/treemaps/"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Cheat Sheet for String Manipulation and Regular Expressions in Python\n",
+        "\n",
+        "#### Basic String Manipulation\n",
+        "- **Case Conversion**:\n",
+        "  ```python\n",
+        "  s.upper(), s.lower(), s.title(), s.capitalize(), s.swapcase()\n",
+        "  ```\n",
+        "- **Trimming Spaces**:\n",
+        "  ```python\n",
+        "  s.strip(), s.lstrip(), s.rstrip()\n",
+        "  ```\n",
+        "- **Padding**:\n",
+        "  ```python\n",
+        "  s.center(width), s.ljust(width), s.rjust(width), s.zfill(width)\n",
+        "  ```\n",
+        "\n",
+        "#### Finding and Replacing\n",
+        "- **Find Substrings**:\n",
+        "  ```python\n",
+        "  s.find(sub), s.rfind(sub), s.index(sub), s.rindex(sub)\n",
+        "  ```\n",
+        "- **Replace Substrings**:\n",
+        "  ```python\n",
+        "  s.replace(old, new)\n",
+        "  ```\n",
+        "\n",
+        "#### Splitting and Joining\n",
+        "- **Split**:\n",
+        "  ```python\n",
+        "  s.split(sep), s.rsplit(sep), s.splitlines()\n",
+        "  ```\n",
+        "- **Join**:\n",
+        "  ```python\n",
+        "  sep.join(iterable)\n",
+        "  ```\n",
+        "\n",
+        "#### Regular Expressions\n",
+        "- **Basic Operations**:\n",
+        "  ```python\n",
+        "  import re\n",
+        "  re.search(pattern, string), re.match(pattern, string), re.findall(pattern, string), re.sub(pattern, repl, string)\n",
+        "  ```\n",
+        "- **Common Patterns**:\n",
+        "  ```python\n",
+        "  \\d, \\D, \\s, \\S, \\w, \\W, [abc], [a-z], [^abc]\n",
+        "  ```\n",
+        "- **Quantifiers**:\n",
+        "  ```python\n",
+        "  *, +, ?, {n}, {m,n}\n",
+        "  ```\n",
+        "\n",
+        "For a detailed guide, visit the original [page](https://jakevdp.github.io/WhirlwindTourOfPython/14-strings-and-regular-expressions.html)."
+      ],
+      "metadata": {
+        "id": "KL6Ft7YpP4E3"
+      }
     },
     {
       "cell_type": "markdown",
