Fixed some comments

--- a/Part_3_Plaso_tools.ipynb
+++ b/Part_3_Plaso_tools.ipynb
@@ -2151,11 +2151,11 @@
         "!ls -l /usr/lib/python3/dist-packages/plaso/engine/artifact_filters.py\n"
       ],
       "metadata": {
-        "id": "DOVRaWLCVew-",
-        "outputId": "285aa790-2ebc-4a22-d3c6-10e964c3ef81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DOVRaWLCVew-",
+        "outputId": "285aa790-2ebc-4a22-d3c6-10e964c3ef81"
       },
       "execution_count": 33,
       "outputs": [
@@ -2178,11 +2178,11 @@
         "!log2timeline.py --artifact_filters \"BrowserCache,BrowserHistory\"  --storage_file mus2019_webhist.plaso $disk_image --status_view none --parsers \"webhist\""
       ],
       "metadata": {
-        "id": "JYOQbZtIX3ot",
-        "outputId": "b9671422-a818-4aba-aa1a-fa75f8182f70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JYOQbZtIX3ot",
+        "outputId": "b9671422-a818-4aba-aa1a-fa75f8182f70"
       },
       "execution_count": 34,
       "outputs": [
@@ -2218,11 +2218,11 @@
         "!pinfo.py --sections \"events,reports,sessions\" mus2019_webhist.plaso"
       ],
       "metadata": {
-        "id": "7JH5S4R0WyjZ",
-        "outputId": "31dd3f0d-bf11-4229-d0d8-e2237cb76234",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7JH5S4R0WyjZ",
+        "outputId": "31dd3f0d-bf11-4229-d0d8-e2237cb76234"
       },
       "execution_count": 35,
       "outputs": [
@@ -3121,7 +3121,7 @@
       "source": [
         "# so definitely less events. The size of mus2019_win7.plaso has shrunk to 170Mb\n",
         "#\n",
-        "# let's filter on the windows link files\n",
+        "# let's filter on the msie:webcache:container data types\n",
         "#\n",
         "filter = \"\\\"data_type is 'msie:webcache:container' \\\"\"\n",
         "print(filter)"
@@ -3282,19 +3282,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# so definitely less events. The size of mus2019_win7.plaso has shrunk to 170Mb\n",
-        "#\n",
-        "# let's filter on the windows link files\n",
+        "# let's filter on the date range and the msie:webcache:container data type\n",
         "#\n",
         "combined_filter = \"\\\"datetime > '2019-03-17 00:00:00' AND datetime <'2019-03-20 00:00:00' AND data_type is 'msie:webcache:container' \\\"\"\n",
         "print(combined_filter)"
       ],
       "metadata": {
-        "id": "fITdpkEfehxy",
-        "outputId": "316d8fe5-18b8-4c29-9c8c-f1ed0c4cd886",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fITdpkEfehxy",
+        "outputId": "316d8fe5-18b8-4c29-9c8c-f1ed0c4cd886"
       },
       "execution_count": 53,
       "outputs": [
@@ -3310,16 +3308,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Filter on datetime (takes about 1 minute)\n",
+        "# Filter with the combined filter (takes about 1 minute)\n",
         "#\n",
         "!psort.py --status_view none -o l2tcsv -w combined_filter.csv $win7plaso  $combined_filter"
       ],
       "metadata": {
-        "id": "CqI-9bGFexU3",
-        "outputId": "d634e516-6290-4bdb-a513-e115ccf12e71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CqI-9bGFexU3",
+        "outputId": "d634e516-6290-4bdb-a513-e115ccf12e71"
       },
       "execution_count": 55,
       "outputs": [
@@ -3346,11 +3344,11 @@
         "!head combined_filter.csv"
       ],
       "metadata": {
-        "id": "j0pMxVgJe7sA",
-        "outputId": "a0af41cf-5f3e-4cee-ae7b-2e5d92b25859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j0pMxVgJe7sA",
+        "outputId": "a0af41cf-5f3e-4cee-ae7b-2e5d92b25859"
       },
       "execution_count": 56,
       "outputs": [
