Updated prompt 8 in maze part

--- a/Part_6_ChatGPT_copilot_DAV.ipynb
+++ b/Part_6_ChatGPT_copilot_DAV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOzP/0yRay9hrwnyrA4yltj",
+      "authorship_tag": "ABX9TyN7PG202HxgCacGAhKy+yDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1014,11 +1014,11 @@
         "draw_maze(maze)\n"
       ],
       "metadata": {
-        "id": "-immFQDKj8aa",
-        "outputId": "3d959fa5-f689-4c76-b477-f28ba14175d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-immFQDKj8aa",
+        "outputId": "3d959fa5-f689-4c76-b477-f28ba14175d0"
       },
       "execution_count": 43,
       "outputs": [
@@ -1201,11 +1201,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "xObwNMniUqbq",
-        "outputId": "c3a89490-e1c6-43f7-d645-93080850013b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xObwNMniUqbq",
+        "outputId": "c3a89490-e1c6-43f7-d645-93080850013b"
       },
       "execution_count": 44,
       "outputs": [
@@ -1393,11 +1393,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "8j-XVc8RZyWi",
-        "outputId": "76fd0a0d-416d-46b8-9dcb-e9b7a49cad51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8j-XVc8RZyWi",
+        "outputId": "76fd0a0d-416d-46b8-9dcb-e9b7a49cad51"
       },
       "execution_count": 45,
       "outputs": [
@@ -1637,11 +1637,11 @@
         "draw_maze(maze, width, height)\n"
       ],
       "metadata": {
-        "id": "mVela5JUYwrl",
-        "outputId": "f5a611f2-0729-4972-8d0f-1459c680f46b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mVela5JUYwrl",
+        "outputId": "f5a611f2-0729-4972-8d0f-1459c680f46b"
       },
       "execution_count": 48,
       "outputs": [
@@ -1945,11 +1945,11 @@
         "draw_maze(maze, width, height, path)\n"
       ],
       "metadata": {
-        "id": "PGtm_DbfmN2c",
-        "outputId": "446586ae-b76b-4352-e178-67c27935c4f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PGtm_DbfmN2c",
+        "outputId": "446586ae-b76b-4352-e178-67c27935c4f9"
       },
       "execution_count": 50,
       "outputs": [
@@ -2220,8 +2220,7 @@
         "## 8 Prompt asking ChatGPT to refactor to a more object oriented design of the code\n",
         "\n",
         "\n",
-        "Here is the complete code for generating and printing the maze using ascii art. It's great work but I have the feeling that using bitwise operations is something for machine code programmers. Can't you come up with a nicer and more natural object oriented solution get this done?\n",
-        "<followed by the complete python script included above>"
+        "The script works beautiful! Can you rewrite it in a more object-oriented way so that the  code is easier to understand and to maintain?"
       ],
       "metadata": {
         "id": "HMu6BtLOV-Uq"
