Updated exercise 4 with windows_field filter as yml file

--- a/Part_3_Plaso_tools.ipynb
+++ b/Part_3_Plaso_tools.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Part_3_Plaso_tools.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1458,7 +1459,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1491,7 +1492,7 @@
         "disk_image = \"/content/gdrive/MyDrive/Images/Windows/MUS-CTF-19-DESKTOP-001.E01\"\n",
         "!ls -l $disk_image"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2011,7 +2012,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2042,7 +2043,7 @@
         "\n",
         "!log2timeline.py -f $filter_windows_evtx --storage_file winsecurity.plaso $disk_image --status_view none --parsers \"winevtx\"\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2898,7 +2899,7 @@
         "#\n",
         "!ls -l $plaso_file\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3515,7 +3516,7 @@
         "!psort.py --status_view none -o xlsx $plaso_file -w mus2019_all.xlsx\n",
         "!ls -l  mus2019_all.xlsx"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3537,7 +3538,7 @@
         "import numpy as np\n",
         "df = pd.read_excel('mus2019_all.xlsx')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3553,7 +3554,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3647,7 +3648,7 @@
       "source": [
         "df[df.source=='EVT'][:3].display_name"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3716,7 +3717,7 @@
           "height": 423
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4182,7 +4183,7 @@
         "#\n",
         "!psort.py --status_view none -o l2tcsv winsecurity.plaso -w winsecurityevtx.csv"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4207,7 +4208,7 @@
       "source": [
         "df_winsec_csv = pd.read_csv('winsecurityevtx.csv')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4223,7 +4224,7 @@
       "source": [
         "df_winsec_csv.dtypes"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4362,7 +4363,7 @@
       "source": [
         "df_winsec_csv"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5003,7 +5004,7 @@
         "#\n",
         "!psort.py --status_view none -o dynamic winsecurity.plaso --additional_fields \"data_type\" -w winsecurityevtx_dynamic_and_datatype.csv"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5028,7 +5029,7 @@
         "df_winsec_dynamic = pd.read_csv('winsecurityevtx_dynamic_and_datatype.csv')\n",
         "df_winsec_dynamic.dtypes"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5127,7 +5128,7 @@
       "source": [
         "df_winsec_dynamic.loc[0,'message']"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5157,7 +5158,7 @@
       "source": [
         "df_winsec_dynamic.tail()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5520,7 +5521,7 @@
       "source": [
         "df_winsec_csv.loc[0,'desc']\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5553,7 +5554,7 @@
         "filter = \"\\\"data_type is 'windows:lnk:link' AND datetime > \\'2019-03-13 00:00:00' AND datetime <\\'2019-03-21 00:00:00\\'\\\"\"\n",
         "print(filter)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5576,7 +5577,7 @@
       "source": [
         "!psort.py --status_view none -o dynamic --additional_fields \"data_type, drive_type, drive_serial_number,droid_file_identifier\"  -w mus2019_filtered_lnk.csv $plaso_file  $filter"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5602,7 +5603,7 @@
         "df_lnk_2019_03 = pd.read_csv('mus2019_filtered_lnk.csv')\n",
         "df_lnk_2019_03.shape"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5629,7 +5630,7 @@
       "source": [
         "df_lnk_2019_03"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6720,7 +6721,7 @@
         "    index_col='datetime'\n",
         "    )"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6745,7 +6746,7 @@
       "source": [
         "df_mus_lnk.index.hour.value_counts()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6829,7 +6830,7 @@
       "source": [
         "df_mus_lnk.dtypes"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6954,7 +6955,7 @@
       },
       "source": [
         "# Create a l2tcsv csv file for mus2019ctf and download it to your computer\n",
-        "# we can use timeline explorer to load this format (this takes 7 minutes)\n",
+        "# we can use timeline explorer to load this format (this takes 5-7 minutes)\n",
         "#\n",
         "!psort.py --status_view none -o l2tcsv $plaso_file -w mus2019_l2tcsv.csv\n",
         "#\n",
@@ -7078,28 +7079,20 @@
       "source": [
         "# The M57 Patents scenario is described here https://digitalcorpora.org/corpora/scenarios/m57-patents-scenario\n",
         "#\n",
-        "# Download the redacted drive images from Charlie, Pat, Jo and Terry (take the last ones):\n",
+        "# Download the redacted drive images from Charlie, Pat, Jo and Terry (take the last ones). This takes app 8 minutes::\n",
         "#\n",
         "# https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/charlie-2009-12-11.E01\n",
         "# https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/jo-2009-12-11-002.E01\n",
         "# https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/pat-2009-12-11.E01\n",
         "#\n",
-        "# Create a WinXP plaso file with a single log2timeline.py command. Save the plaso file for later use\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "# Create a subfolder images where the 4 e01 files are stored\n",
-        "#\n",
-        "#!cd\n",
-        "#!mkdir images\n",
-        "#!cd images\n",
+        "\n",
         "!curl -o charlie-2009-12-11.E01 https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/charlie-2009-12-11.E01\n",
         "!curl -o jo-2009-12-11-002.E01 https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/jo-2009-12-11-002.E01\n",
         "!curl -o pat-2009-12-11.E01 https://digitalcorpora.s3.amazonaws.com/corpora/scenarios/2009-m57-patents/drives-redacted/pat-2009-12-11.E01\n",
         "\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7122,9 +7115,10 @@
         "outputId": "18600492-a238-4a1e-a2e3-782657624ec7"
       },
       "source": [
-        "# start with processing pat\n",
+        "# start with processing pat (3 minutes)\n",
         "#\n",
-        "!log2timeline.py -f filter_windows.txt --parsers winxp --storage_file pat.plaso images/pat-2009-12-11.E01 --status_view none\n",
+        "\n",
+        "!log2timeline.py -f $filter_windows  --parsers winxp --storage_file pat.plaso pat-2009-12-11.E01 --status_view none\n",
         "!psort.py --status_view none -o dynamic --additional_fields \"data_type, drive_type, drive_serial_number,droid_file_identifier\"  -w pat.csv pat.plaso\n",
         "#\n",
         "# add a column to the file indicating that these lines are from pat and store the results in m57patents.csv\n",
@@ -7171,9 +7165,9 @@
         "outputId": "cc5223af-dfa3-4881-aa18-c26669e2fc4e"
       },
       "source": [
-        "# then with processing charlie\n",
+        "# then with processing Charlie (3 minutes)\n",
         "#\n",
-        "!log2timeline.py -f filter_windows.txt --parsers winxp --storage_file charlie.plaso images/charlie-2009-12-11.E01 --status_view none\n",
+        "!log2timeline.py -f $filter_windows  --parsers winxp --storage_file charlie.plaso charlie-2009-12-11.E01 --status_view none\n",
         "!psort.py --status_view none -o dynamic --additional_fields \"data_type, drive_type, drive_serial_number,droid_file_identifier\"  -w charlie.csv charlie.plaso\n",
         "#\n",
         "# add a column to the file indicating that these lines are from pat and store the results in m57patents.csv\n",
@@ -7218,9 +7212,9 @@
         "outputId": "d4356902-bd3e-4a6e-ed5f-f179568f5ed7"
       },
       "source": [
-        "# then with processing jo\n",
+        "# then with processing Jo (3 minutes)\n",
         "#\n",
-        "!log2timeline.py -f filter_windows.txt --parsers winxp --storage_file jo.plaso images/jo-2009-12-11-002.E01 --status_view none\n",
+        "!log2timeline.py -f $filter_windows  --parsers winxp --storage_file jo.plaso jo-2009-12-11-002.E01 --status_view none\n",
         "!psort.py --status_view none -o dynamic --additional_fields \"data_type, drive_type, drive_serial_number,droid_file_identifier\"  -w jo.csv jo.plaso\n",
         "#\n",
         "# add a column to the file indicating that these lines are from pat and store the results in m57patents.csv\n",
